Buttons in header are responsive, works IE9+

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id="header-bar" class="ed-bg-blue">   
 			<div class="container-fluid">
 				<div class="row ed-hdr-row ">
-					<div class="col-md-6 col-sm-12 vcenter">
+					<div class="col-md-5 col-sm-5 vcenter">
 						<div class="row">
 							
 								<div id="logo" class=" col-md-4 col-sm-4 vcenter">
@@ -25,17 +25,23 @@
 									--><img src="images/logo.png" class="img-responsive" alt="Logo"></img>
 								</div><!--
 							 --><div id="context-btn" class=" col-md-4 col-sm-4 vcenter">
-									<button class="btn ed-btn  btn-sm ">Change Context</button>
+									<button class="btn ed-btn  btn-sm responsive-width ">Change Context</button>
 								</div>
 						</div>
-					</div><!--
-				 --><div class="col-md-2 col-md-offset-1 col-sm-3 col-sm-offset-3 vcenter">
-							<span>welcome John Doe</span> 
-					</div><!--
-				 --><div class="col-md-3 col-md-offset-0 col-sm-3 col-sm-offset-3 vcenter">
-							<button class="btn ed-btn btn-sm ">Log Out</button>
-							<button class="btn ed-btn btn-sm">Change Password</button>	
-					</div>
+					</div><!-- end of 1st Column
+				 --><div class="col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 vcenter">
+						<div class="row">
+							<div id="welcome" class="col-md-5 col-md-offset-1 col-sm-5 vcenter">
+								<span>welcome John Doe</span> 
+							</div><!--
+						 --><div class="col-md-2  col-sm-2  vcenter">
+								<button class="btn ed-btn btn-sm responsive-width">Log Out</button>								
+							</div><!--
+						 --><div class="col-md-4  col-sm-5  vcenter">
+								<button class="btn ed-btn btn-sm responsive-width">Change Password</button>								
+							</div>
+						</div>
+					</div> <!-- end of 2nd Column -->
 				</div> <!-- end of row -->
 			</div><!-- end of Container -->
 		</div>
