fixed the height of CSS Line after Logo and welcome msg.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				 --><div class="col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2 vcenter">
 						<div class="row">
 							<div id="welcome" class="col-md-5 col-md-offset-1 col-sm-5 vcenter">
-								<span>welcome John Doe</span>
+								<span>Welcome John Doe</span>
 																	
 							</div><!--
 						 --><div class="col-md-2  col-sm-2  vcenter">
